2007-03-29 Leszek Ciesielski <skolima@gmail.com>
	* OracleConnection.cs: consecutive calls to Open() do not spawn
	multiple connections

2007-02-13 Leszek Ciesielski <skolima@gmail.com>
	* OracleNumber.cs: added an internal IFormattable ToString
	* OracleParameter.cs: added handling of OracleString, OracleDateTime,
	OracleNumber

2007-01-04 Leszek Ciesielski <skolima@gmail.com>
	* OracleParameter.cs:  padding the allocated memory  with 0's (this is what OCI
	expects)

2006-10-19  Leszek Ciesielski <skolima@gmail.com>
	* OracleConnection.cs: moved setting SessionFormatProvider from Open() into first access to it.
	* OracleParameter.cs: made exception in InferOracleType a bit more verbose.

2006-10-17  Leszek Ciesielski <skolima@gmail.com>

	* OracleCommand.cs: changed returned value of ExecuteScalar to null when no recods are
	found
	* OracleDataReader.cs: Marked GetSchemaTable with MonoTODO
	* OracleParameter.cs: fixed the constructor (it ignored some
	parameters and could not handle System.DBNull)
	* OciDefineHandle.cs: applied patch for trimming strings with unicode,
	although I can't test it :-/
2006-05-31  Gert Driesen  <drieseng@users.sourceforge.net>

	* OciGlue.cs: Set eol-style to native.
        * OracleBFile.cs: Set eol-style to native.
        * OracleBinary.cs: Set eol-style to native.
        * OracleBoolean.cs: Set eol-style to native.
        * OracleCommandBuilder.cs: Set eol-style to native.
        * OracleCommand.cs: Set eol-style to native.
        * OracleConnection.cs: Set eol-style to native.
        * OracleConnectionPool.cs: Set eol-style to native.
        * OracleConnectionPoolManager.cs: Set eol-style to native.
        * OracleDataAdapter.cs: Set eol-style to native.
        * OracleDataReader.cs: Set eol-style to native.
        * OracleDateTime.cs: Set eol-style to native.
        * OracleException.cs: Set eol-style to native.
        * OracleInfoMessageEventArgs.cs: Set eol-style to native.